implemented add and delete functions

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -20,6 +20,10 @@
         margin-top: 15px;
         display: flex;
         justify-content: flex-end;
+        button{
+            width: 30px;
+            height: 30px;
+        }
     }
     &__icon{
         cursor: pointer;
