--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,8 +1,8 @@
 
 .modal{
     font-family: 'Roboto', sans-serif;
-    height: 60vh;
-    width: 100vh;
+    height: 500px;
+    width: 50%;
     background: #fff;
     position: fixed;
     top: 50%;
@@ -56,8 +56,10 @@
         font-weight: 500;
         margin-bottom: 0.3em;
     }
-    textarea{
+    input{
+       display: block;
        width: 100%;
+       height: 30px;
        padding: 0.7em, 0.5em;
        border: 1px solid #d0d0d0;
        outline: none;
@@ -65,7 +67,12 @@
        border-radius: 0.3em;
        resize: none;
     }
-    textarea:not(:last-child){
+    input:not(:last-child){
         margin-bottom: 1.2em;
+    }
+    p{
+        opacity: 1;
+        transition: all 0.5s;
+        color: red;
     }
 }
