--- a/src/components/cards/Cards.scss
+++ b/src/components/cards/Cards.scss
@@ -1,9 +1,10 @@
 .cards{
     &__container{
         display: grid;
-        grid-template-columns: repeat(4, auto);
-        grid-template-rows: repeat(4,auto);
+        grid-template-columns: repeat(auto-fit, minmax(300px,auto));
+        grid-template-rows: repeat(auto-fit,minmax(150px,auto));
         gap: 60px;
+        justify-content: center;
 
     }
 
