--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -30,11 +30,11 @@
     }
     &__exit{
         position: absolute;
-        top: 0;
-        right: 40px;
+        top: 50px;
+        right: 30px;
         background-color: #587ef4;
-        height: 50px;
-        width: 50px;
+        height: 7vh;
+        width: 7vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -74,5 +74,10 @@
         opacity: 1;
         transition: all 0.5s;
         color: red;
+    }
+}
+@media(max-width:767px){
+    .modal{
+        width: 100%;
     }
 }
